--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-date-range": "^2.0.0-alpha.4",
